# clawsh

./: Cargo.toml  install.sh
.github/workflows/: ci.yml  release.yml
crates/clawsh-classifier/: Cargo.toml
crates/clawsh-classifier/src/: lib.rs
crates/clawsh-classifier/tests/: classifier_test.rs
crates/clawsh-config/: Cargo.toml
crates/clawsh-config/src/: lib.rs
crates/clawsh-config/tests/: config_test.rs
crates/clawsh-core/: Cargo.toml
crates/clawsh-core/src/: executor.rs  lib.rs  repl.rs  setup.rs
crates/clawsh-core/tests/: executor_test.rs
crates/clawsh-llm/: Cargo.toml
crates/clawsh-llm/src/: claude.rs  lib.rs  ollama.rs  openai.rs
crates/clawsh-safety/: Cargo.toml
crates/clawsh-safety/src/: lib.rs
crates/clawsh-safety/tests/: safety_test.rs
docs/superpowers/plans/: 2026-04-09-clawsh-implementation.md
docs/superpowers/specs/: 2026-04-09-clawsh-design.md
src/: main.rs
