[package]
name = "clawsh-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rustyline = "14"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
clawsh-config = { path = "../clawsh-config" }
clawsh-llm = { path = "../clawsh-llm" }
clawsh-classifier = { path = "../clawsh-classifier" }
clawsh-safety = { path = "../clawsh-safety" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
